--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,17 @@ environment:
   sdk: '>=2.0.0 <3.0.0'
 
 dependencies:
-  yaml: ^2.1.15
+  angular: ^5.0.0
+  angular_components: ^0.9.0
 
 dev_dependencies:
+  angular_test: ^2.0.0
   build_runner: ^0.10.0
+  build_test: ^0.10.2
   build_web_compilers: ^0.4.0
+  test: ^1.0.0
+
+# Non-angular dev
+#dev_dependencies:
+#  build_runner: ^0.10.0
+#  build_web_compilers: ^0.4.0
