--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   angular: ^5.0.0
   angular_components: ^0.9.0
+  pdx_data_tools:
+    git: git://github.com/martinlyra/pdx_data_tools.git
 
 dev_dependencies:
   angular_test: ^2.0.0
